добавила исправления в контроллере. поправила интервалы, изменила параметры в сервисе и исправила тесты